# deepsecrets

./: Dockerfile  README.md  pyproject.toml
deepsecrets/: __init__.py  __main__.py  cli.py  config.py
deepsecrets/core/engines/: semantic.py
deepsecrets/core/model/: file.py  finding.py
deepsecrets/core/modes/: iscan_mode.py
deepsecrets/core/tokenizers/: lexer.py
deepsecrets/core/utils/: cpu.py  file_analyzer.py  guess_filetype.py  log.py
deepsecrets/rules/: excluded_paths.json  regexes.json
deepsecrets/scan_modes/: cli.py
tests/cli/: test_cli.py
tests/core/engines/regex/: test_regex.py
tests/core/tokenizers/lexer/variable_detection/: test_js.py
tests/core/utils/: test_lexer_finder.py
tests/fixtures/: 2.json  regex_checks.txt
tests/scan_modes/: test_cli_scan_mode.py
